Template + base.html

--- a/src/conta-papagne-app/templates/categorie.html
+++ b/src/conta-papagne-app/templates/categorie.html
@@ -1,24 +1,4 @@
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Categorie</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100">
-
-<!-- Navbar -->
-<nav class="bg-gray-800 p-4 text-white">
-  <div class="container mx-auto flex justify-between items-center">
-    <a href="index.html" class="text-xl mx-2">ContaPapagne</a>
-      <div>
-
-          <a href="movimenti.html" class="text-xl mx-2">Movimenti</a>
-          <a href="investimenti.html" class="text-xl mx-2">Investimenti</a>
-          <a href="categorie.html" class="text-xl mx-2">Categorie</a>
-      </div>
-  </div>
-</nav>
+{% extends 'base.html' %}
 
 
     <!-- Form Section -->
