Base.html template implemented fully

--- a/src/conta-papagne-app/templates/categorie.html
+++ b/src/conta-papagne-app/templates/categorie.html
@@ -1,6 +1,11 @@
 {% extends 'base.html' %}
 
+{% block title %}
+Categorie
+{% endblock title %}
 
+
+{% block content %}  
     <!-- Form Section -->
     <div class="container mx-auto my-8 p-8">
         <div class="w-full max-w-md mx-auto">
@@ -36,6 +41,4 @@
             </form>
         </div>
     </div>
-
-</body>
-</html>
+{% endblock content %}
