--- a/src/conta-papagne-app/templates/base.html
+++ b/src/conta-papagne-app/templates/base.html
@@ -1,35 +1,17 @@
 <html lang="it">
 <head>
-  {% block head %}
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+{% include 'head.html' %}
   <title>{% block title %}ContaPapagne{% endblock %}</title>
-  <script src="https://cdn.tailwindcss.com"></script>
-  {% endblock %}
+{% block head %}{% endblock %}
 </head>
-
 <body class="bg-gray-100">
-  {% block content %}
-  <!-- Navbar -->
-  <nav class="bg-gray-800 p-4 text-white">
-    <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-xl">ContaPapagne</h1>
-      <div>
-        <a href="{{ url_for('movimenti') }}" class="text-xl mx-2">Movimenti</a>
-        <a href="{{ url_for('investimenti') }}" class="text-xl mx-2">Investimenti</a>
-        <a href="{{ url_for('categorie') }}" class="text-xl mx-2">Categorie</a>
-      </div>
-    </div>
-  </nav>
-
-  <!-- Content will be overridden by child templates -->
-  {% endblock %}
-
-  {% block footer %}
-  <!-- Footer -->
-  <footer class="bg-gray-800 p-4 text-white text-center">
-    &copy; Copyright 2024 by <a href="https://github.com/h4rk">you</a>.
-  </footer>
-  {% endblock %}
+  
+{% block style %}{% endblock style %}
+  {% include 'navbar.html' %}
+{% block content %}
+{% endblock content %}  
+{% block footer %}
+  {% include 'footer.html' %}
+{% endblock footer %}
 </body>
 </html>
