--- a/src/conta-papagne-app/templates/dashboard-variant.html
+++ b/src/conta-papagne-app/templates/dashboard-variant.html
@@ -1,6 +1,3 @@
-
-
-
 {% extends "base.html" %}
 
 {% block title %}
@@ -8,13 +5,11 @@ Dashboard - ContaPapagne
 {% endblock %}
 
 {% block head %}
-{{ super() }}
 {% endblock %}
 
 {% block content %}
-<body class="bg-gray-100">
 
-
+{% block style %}
     <style>
       .button-fill-effect {
           position: relative;
@@ -55,12 +50,9 @@ Dashboard - ContaPapagne
       .button-fill-effect:hover {
           color: #fce2d1; /* Ensuring text color contrasts well with #FFA17A */
       }
-      </style>
-      
-      
-  
-  
-      {{ super() }}
+    </style>
+{% endblock style %}   
+
   
   
   <!-- Hero Section -->
