--- a/src/conta-papagne-app/templates/investimenti.html
+++ b/src/conta-papagne-app/templates/investimenti.html
@@ -1,30 +1,12 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Investimenti</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100">
-
-<!-- Navbar -->
-<nav class="bg-gray-800 p-4 text-white">
-  <div class="container mx-auto flex justify-between items-center">
-    <a href="index.html" class="text-xl mx-2">ContaPapagne</a>
-      <div>
-
-          <a href="movimenti.html" class="text-xl mx-2">Movimenti</a>
-          <a href="investimenti.html" class="text-xl mx-2">Investimenti</a>
-          <a href="categorie.html" class="text-xl mx-2">Categorie</a>
-      </div>
-  </div>
-</nav>
+{% extends "base.html" %}
 
 
+{% block title %}
+Investimenti
+{% endblock title %}
+    
 
-
-
+{% block content %}
     <!-- Form Section -->
     <div class="container mx-auto my-8 p-8">
         <div class="w-full max-w-xs mx-auto">
@@ -56,6 +38,4 @@
             </form>
         </div>
     </div>
-
-</body>
-</html>
+{% endblock content %}
