--- a/src/conta-papagne-app/templates/movimenti.html
+++ b/src/conta-papagne-app/templates/movimenti.html
@@ -1,26 +1,10 @@
-<!DOCTYPE html>
-<html lang="it">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Movimenti</title>
-    <script src="https://cdn.tailwindcss.com"></script>
-</head>
-<body class="bg-gray-100">
+{% extends "base.html" %}
 
-<!-- Navbar -->
-<nav class="bg-gray-800 p-4 text-white">
-  <div class="container mx-auto flex justify-between items-center">
-    <a href="index.html" class="text-xl mx-2">ContaPapagne</a>
-      <div>
-          <a href="movimenti.html" class="text-xl mx-2">Movimenti</a>
-          <a href="investimenti.html" class="text-xl mx-2">Investimenti</a>
-          <a href="categorie.html" class="text-xl mx-2">Categorie</a>
-      </div>
-  </div>
-</nav>
+{% block title %}
+Movimenti
+{% endblock title %}
 
-
+{% block content %}   
     <!-- Form Section -->
     <div class="container mx-auto my-8 p-8">
         <div class="w-full max-w-lg mx-auto">
@@ -52,6 +36,4 @@
             </form>
         </div>
     </div>
-
-</body>
-</html>
+{% endblock content %}
