--- a/src/conta-papagne-app/templates/footer.html
+++ b/src/conta-papagne-app/templates/footer.html
@@ -1,3 +1,5 @@
 <footer class="bg-gray-800 p-4 text-white text-center">
+  <div class="container mx-auto">
   &copy; Copyright 2024 by <a href="https://github.com/h4rk">you</a>.
+</div>
 </footer>
