--- a/src/conta-papagne-app/templates/navbar.html
+++ b/src/conta-papagne-app/templates/navbar.html
@@ -1,10 +1,11 @@
   <nav class="bg-gray-800 p-4 text-white">
     <div class="container mx-auto flex justify-between items-center">
-      <h1 class="text-xl">ContaPapagne</h1>
+      <h1 class="text-xl"><a href="{{ url_for('home') }}" class="text-xl mx-2">ContaPapagne</a></h1>
       <div>
-        <a href="{{ url_for('movimenti') }}" class="text-xl mx-2">Movimenti</a>
-        <a href="{{ url_for('investimenti') }}" class="text-xl mx-2">Investimenti</a>
-        <a href="{{ url_for('categorie') }}" class="text-xl mx-2">Categorie</a>
+        <a href="{{ url_for('movimenti.index') }}" class="text-xl mx-2">Movimenti</a>
+        <a href="{{ url_for('investimenti.index') }}" class="text-xl mx-2">Investimenti</a>
+        <a href="{{ url_for('budgets.index') }}" class="text-xl mx-2">Budgets</a>
+		<a href="{{ url_for('settings.index') }}" class="text-xl mx-2">Settings</a>
       </div>
     </div>
 </nav>
