--- a/src/conta-papagne-app/templates/navbar.html
+++ b/src/conta-papagne-app/templates/navbar.html
@@ -13,7 +13,7 @@
     <div class="hidden w-full md:block md:w-auto" id="navbar-default">
       <ul class="font-medium flex flex-col p-4 md:p-0 mt-4 border border-gray-100 rounded-lg bg-teal-50 md:flex-row md:space-x-8 rtl:space-x-reverse md:mt-0 md:border-0 md:bg-white dark:bg-teal-800 md:dark:bg-teal-900 dark:border-gray-700">
         <li>
-          <a href="{{ url_for('movimenti.index') }}" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent">Movimenti</a>
+		  <p hx-get="{{url_for('movimenti.dashboard')}}" hx-target="main" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent">Movimenti</p>
         </li>
         <li>
           <a href="{{ url_for('investimenti.index') }}" class="block py-2 px-3 text-gray-900 rounded hover:bg-teal-100 md:hover:bg-transparent md:border-0 md:hover:text-teal-700 md:p-0 dark:text-white md:dark:hover:text-teal-500 dark:hover:bg-teal-700 dark:hover:text-white md:dark:hover:bg-transparent">Investimenti</a>
