aggiungi tag name altrimenti htmx non invia i dati

--- a/src/ContaPapagneApp/templates/mov/movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/movimenti.html
@@ -15,19 +15,19 @@
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="data_movimento">
                         Data
                     </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="data_movimento" type="date" placeholder="Data Movimento">
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="data_movimento" name="data_movimento" type="date" placeholder="Data Movimento">
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="importo_movimento">
                         Importo
                     </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" type="number" placeholder="Importo">
+                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" name="importo_movimento" type="number" placeholder="Importo">
                 </div>
                 <div class="mb-4">
                     <label class="block text-gray-700 text-sm font-bold mb-2" for="descrizione_movimento">
                         Descrizione
                     </label>
-                    <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="descrizione_movimento" placeholder="Descrizione"></textarea>
+                    <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="descrizione_movimento" name="descrizione_movimento" placeholder="Descrizione"></textarea>
                 </div>
                 <div class="flex items-center justify-between">
                     <button id="submitbtn"class="button-fill-effect font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
