--- a/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
@@ -10,32 +10,7 @@
     <div class="flex flex-col lg:flex-row gap-4 mb-8">
         <div class="bg-white rounded shadow-lg p-6 flex-1">
             <h3 class="text-xl font-bold mb-4">Registra Movimento</h3>
-            <form class="bg-white rounded px-8 pt-6 pb-8 mb-4" hx-post="{{url_for('movimenti.createMovimento')}}" hx-target="#target-conferma" hx-trigger="click from:#submitbtn">
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="data_movimento">
-                        Data
-                    </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="data_movimento" name="data_movimento" type="date" placeholder="Data Movimento">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="importo_movimento">
-                        Importo
-                    </label>
-                    <input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" name="importo_movimento" type="number" placeholder="Importo">
-                </div>
-                <div class="mb-4">
-                    <label class="block text-gray-700 text-sm font-bold mb-2" for="descrizione_movimento">
-                        Descrizione
-                    </label>
-                    <textarea class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="descrizione_movimento" name="descrizione_movimento" placeholder="Descrizione"></textarea>
-                </div>
-                <div class="flex items-center justify-between">
-                    <button id="submitbtn"class="button-fill-effect font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
-                        Registra
-                    </button>
-                </div>
-            </form>
-			<div id="target-conferma"></div>
+            {% include 'mov/movimento-form.html' %}
         </div>
         
         <!-- Placeholder per grafici o andamenti -->
@@ -51,5 +26,6 @@
     <div class="bg-white rounded shadow-lg p-6">
         <h3 class="text-xl font-bold mb-4">Dettaglio Movimenti</h3>
         <!-- qui andrá tabella dinamica -->
+		<div hx-get="{{url_for('movimenti.listaMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this"></div>
     </div>
 </div>
