--- a/src/ContaPapagneApp/templates/mov/lista-movimenti-short.html
+++ b/src/ContaPapagneApp/templates/mov/lista-movimenti-short.html
@@ -1,15 +1,53 @@
-<table>
-	<th>
-		<td>Data movimento</td>
-		<td>Importo</td>
-		<td>Descrizione</td>
-	</th>
-	{% for item in movimenti %}
-	<tr>
-		<td>{{item.data}}</td>
-		<td>{{item.importo}}</td>
-		<td>{{item.descrizione}}</td>
-	</tr>
-	{% endfor %}
+<style>
+	.grid-header {
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr 1fr 4fr;
+			background-color: #f2f2f2;
+	}
 
-</table>
+	.grid-header-cell {
+			background-color: #134e4a;
+			color: white;
+			padding: 10px;
+			text-align: left;
+			text-transform: uppercase;
+			font-weight: bold;
+	}
+	.grid-row {
+			background-color: white;
+			border-bottom: 1px solid #ddd;
+			padding: 8px;
+	}
+	.grid-content {
+			display: grid;
+			grid-template-columns: 1fr 1fr 1fr 1fr 4fr;
+			gap: 5px;
+			padding: 5px;
+			background-color: #f2f2f2;
+			border-collapse: collapse;
+			overflow-y: auto;
+			max-height: 200px;
+	}
+</style>
+
+
+<div class="grid-table">
+	<div class="grid-header">
+			<div class="grid-header-cell">Data movimento</div>
+			<div class="grid-header-cell">Importo</div>
+			<div class="grid-header-cell">Categoria</div>
+			<div class="grid-header-cell">Risarcimento?</div>
+			<div class="grid-header-cell">Descrizione</div>
+	</div>
+
+
+	<div class="grid-content">
+			{% for item in movimenti %}
+			<div class="grid-row">{{ item.data }}</div>
+			<div class="grid-row">{{ item.importo }}</div>
+			<div class="grid-row">categoria riga</div>
+			<div class="grid-row">SI</div>
+			<div class="grid-row">{{ item.descrizione }}</div>
+			{% endfor %}
+	</div>
+</div>
