--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -1,4 +1,4 @@
-<form id="movimento-form" class="bg-white rounded px-8 pt-6 pb-8 mb-4" hx-post="{{url_for('movimenti.createMovimento')}}" hx-swap="none" hx-trigger="click from:#submitbtn">
+<form id="movimento-form" class="bg-white rounded px-8 pt-6 pb-8 mb-4" hx-post="{{url_for('movimenti.createMovimento')}}" hx-target="main">
 	<div class="mb-4">
 		<label class="block text-gray-700 text-sm font-bold mb-2" for="data_movimento">
 			Data
@@ -19,12 +19,12 @@
 	</div>
 	<div class="mb-4">
 		<label class="block text-gray-700 text-sm font-bold mb-2" for="risarcimento_movimento">
-			Importo
+			Risarcimento
 		</label>
-		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="risarcimento_movimento" name="risarcimento_movimento" type="text" placeholder="rirarcimento">
+		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="risarcimento_movimento" name="risarcimento_movimento" type="text" placeholder="risarcimento">
 	</div>
 	<div class="flex items-center justify-between">
-		<button id="submitbtn"class="button-fill-effect font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="button">
+		<button class="button-fill-effect font-bold py-2 px-4 rounded focus:outline-none focus:shadow-outline" type="submit">
 			Registra
 		</button>
 	</div>
