--- a/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
@@ -26,6 +26,7 @@
     <div class="bg-white rounded shadow-lg p-6">
         <h3 class="text-xl font-bold mb-4">Dettaglio Movimenti</h3>
         <!-- qui andrá tabella dinamica -->
-		<div hx-get="{{url_for('movimenti.listaMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this"></div>
+		<img id="spinner-id" src="../static/img/spinning-circles.svg" alt="Loading animation..." class="htmx-indicator">
+		<div hx-get="{{url_for('movimenti.listaMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this" hx-indicator="#spinner-id"></div>
     </div>
 </div>
