--- a/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
@@ -27,6 +27,6 @@
         <h3 class="text-xl font-bold mb-4">Dettaglio Movimenti</h3>
         <!-- qui andrá tabella dinamica -->
 		<img id="spinner-id" src="../static/img/spinning-circles.svg" alt="Loading animation..." class="htmx-indicator">
-		<div hx-get="{{url_for('movimenti.listaMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this" hx-indicator="#spinner-id"></div>
+		<div hx-get="{{url_for('movimenti.listaBreveMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this" hx-indicator="#spinner-id"></div>
     </div>
 </div>
