equilibrismo con javascript

--- a/src/ContaPapagneApp/templates/test-form-palette.html
+++ b/src/ContaPapagneApp/templates/test-form-palette.html
@@ -177,6 +177,7 @@
         right: 0px;
     }
 </style>
+<script src="../static/js/util.js"></script>
 </head>
 <body>
 
@@ -208,23 +209,7 @@
 </div>
 
 <script>
-    document.getElementById('toggle-switch').addEventListener('change', function() {
-        var formContainer = document.getElementById('form-container');
-        var formTitle = document.getElementById('form-title');
-        var submitBtn = document.getElementById('submit-btn');
-
-        if(this.checked) {
-            formContainer.className = 'form-container income-form';
-            formTitle.innerText = 'Income Form';
-            submitBtn.className = 'submit-btn income-btn';
-            submitBtn.innerText = 'Add Income';
-        } else {
-            formContainer.className = 'form-container expenses-form';
-            formTitle.innerText = 'Expenses Form';
-            submitBtn.className = 'submit-btn expenses-btn';
-            submitBtn.innerText = 'Add Expense';
-        }
-    });
+    document.getElementById('toggle-switch').addEventListener('change', switchForm);
 </script>
 
 </body>
