--- a/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/dashboard-movimenti.html
@@ -23,10 +23,8 @@
     </div>
   
     <!-- Movimenti Table Section -->
-    <div class="bg-white rounded shadow-lg p-6">
-        <h3 class="text-xl font-bold mb-4">Dettaglio Movimenti</h3>
-        <!-- qui andrá tabella dinamica -->
-		<img id="spinner-id" src="../static/img/spinning-circles.svg" alt="Loading animation..." class="htmx-indicator">
-		<div hx-get="{{url_for('movimenti.listaBreveMovimenti')}}" hx-trigger="load" hx-swap="outerHTML" hx-target="this" hx-indicator="#spinner-id"></div>
+    <div hx-get="{{url_for('movimenti.listaMovimenti')}}" hx-trigger="click" hx-indicator="#spinner-id" hx-target="main" class="bg-white rounded shadow-lg p-6 text-xl font-bold mb-4">
+        Click per andare alla lista movimenti
+        <img id="spinner-id" src="../../static/img/spinning-circles.svg" alt="Loading..." class="htmx-indicator">
     </div>
 </div>
