--- a/src/ContaPapagneApp/templates/mov/lista-movimenti.html
+++ b/src/ContaPapagneApp/templates/mov/lista-movimenti.html
@@ -1,13 +1,61 @@
-<!-- Main Content -->
-<div class="container mx-auto my-8">
-    <!-- Page Heading -->
-    <div class="text-center mb-8">
-        <h2 class="text-3xl font-bold">Movimenti</h2>
-    </div>
-  
-    <!-- Main Section -->
-    <div class="flex flex-col lg:flex-row gap-4 mb-8">
-        <div class="bg-white rounded shadow-lg p-6 flex-1">
-            <h3 class="text-xl font-bold mb-4">Lista Movimenti</h3>
+<div>
+    <style>
+        .grid-header {
+                display: grid;
+                grid-template-columns: 1fr 1fr 2fr 1fr 3fr;
+                background-color: #f2f2f2;
+        }
+    
+        .grid-header-cell {
+                background-color: #134e4a;
+                color: white;
+                padding: 10px;
+                text-align: left;
+                text-transform: uppercase;
+                font-weight: bold;
+        }
+        .grid-row {
+                background-color: white;
+                border-bottom: 1px solid #ddd;
+                padding: 8px;
+        }
+        .grid-content {
+                display: grid;
+                grid-template-columns: 1fr 1fr 2fr 1fr 3fr;
+                gap: 5px;
+                padding: 5px;
+                background-color: #f2f2f2;
+                border-collapse: collapse;
+                overflow-y: auto;
+                max-height: 200px;
+        }
+        .categoria {
+            background-color: #134e4a;
+            padding: 3px;
+            border-radius: 5px;
+            color: #f2f2f2;
+        }
+    </style>
+    
+    
+    <div class="grid-table">
+        <div class="grid-header">
+                <div class="grid-header-cell">Data</div>
+                <div class="grid-header-cell">Importo</div>
+                <div class="grid-header-cell">Categoria</div>
+                <div class="grid-header-cell">Risarcito</div>
+                <div class="grid-header-cell">Descrizione</div>
         </div>
+    
+    
+        <div class="grid-content">
+                {% for item in movimenti %}
+                <div class="grid-row">{{ item.data }}</div>
+                <div class="grid-row">{{ item.importo }}</div>
+                <div class="grid-row flex gap-x-1"><span class="categoria">spesina</span><span class="categoria">spesina</span><span class="categoria">spesina</span></div>
+                <div class="grid-row">SI</div>
+                <div class="grid-row">{{ item.descrizione }}</div>
+                {% endfor %}
+        </div>
+    </div>
 </div>
