Fix import per numeri decimali

--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -9,7 +9,7 @@
 		<label class="block text-gray-700 text-sm font-bold mb-2" for="importo_movimento">
 			Importo
 		</label>
-		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" name="importo_movimento" type="number" placeholder="Importo">
+		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" name="importo_movimento" type="number" min="0" step="0.01" placeholder="Importo">
 	</div>
 	<div class="mb-4">
 		<label class="block text-gray-700 text-sm font-bold mb-2" for="descrizione_movimento">
