--- a/src/ContaPapagneApp/templates/mov/movimento-form.html
+++ b/src/ContaPapagneApp/templates/mov/movimento-form.html
@@ -12,6 +12,22 @@
 		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="importo_movimento" name="importo_movimento" type="number" min="0" step="0.01" placeholder="Importo">
 	</div>
 	<div class="mb-4">
+		<label class="block text-gray-700 text-sm font-bold mb-2" for="categoria_movimento">
+			Categoria
+		</label>
+		<input class="shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline" id="categoria_movimento" 
+			name="categoria_movimento" 
+			type="text" 
+			hx-get="{{url_for('movimenti.fetchCategorie')}}" 
+			hx-target="#res_fetch" 
+			hx-swap="innerHTML" 
+			hx-trigger="keyup changed delay:500ms" 
+			hx-indicator="#fetch-indicator">
+		<div id="res_fetch">
+			<img id="fetch-indicator" src="../../static/img/spinning-circles.svg" alt="Fetching..." class="htmx-indicator">
+		</div>
+	</div>
+	<div class="mb-4">
 		<label class="block text-gray-700 text-sm font-bold mb-2" for="descrizione_movimento">
 			Descrizione
 		</label>
